# demo-data-analysis

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/plans/: 2026-03-01-synthetic-data-profiler-design.md  2026-03-01-synthetic-data-profiler-implementation.md
src/: cli.py  config.py
src/connections/: bigquery.py  mysql.py  openmetadata.py
src/discovery/: classifier.py  schema.py
src/profiling/: profiler.py  sampler.py
src/ratios/: calculator.py  detector.py
src/storage/: models.py  store.py
src/synthetic_data_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bigquery_connection.py  test_classifier.py  test_cli.py  test_config.py  test_integration.py  test_mysql_connection.py  test_openmetadata.py  test_profiler.py  test_ratio_calculator.py  test_ratio_detector.py  test_sampler.py  test_schema_discovery.py  test_storage_models.py  test_storage_store.py
